@@ -2,18 +2,14 @@
 - Map reset
 - Stop game
 - Search for chests in a world
-- Use equalsignorecase rather than equals
 - Random events
 - Factions
     - Force damage
 - Chest loot by command
 - Sponsor loot by command
-- Use as minimal saving as possible
 - Config option for automatic readyness
 - Could not load games.yml should not be severe
 - better /hg stat
-- Fix Leave command
-- Fix rejoin command
 - Fixed item chests
 - Ability for sponsors to invisibly teleport to a player to sponsor and stuff
 - Respawn at random spot if not spawnpoint
